list layout issue fixed

--- a/widget/assets/css/style.css
+++ b/widget/assets/css/style.css
@@ -94,7 +94,7 @@
 	max-height:100%;
 }
 .list-layout.layout-6 .list-item-media .list-media-holder{
-	height:150px;
+	height:70px;
 }
 .list-layout.layout-6 .list-item-media .list-media-holder img{
 	max-height:100%;
